crates/shipper-process/src/snapshots/shipper_process__snapshot_tests__command_result_failure_no_exit_code.snap
---
source: crates/shipper-process/src/lib.rs
expression: result
---
success: false
exit_code: ~
stdout: ""
stderr: process terminated by signal
duration_ms: 300
