crates/shipper-process/src/snapshots/shipper_process__snapshot_tests__command_result_failure_with_exit_code.snap
---
source: crates/shipper-process/src/lib.rs
expression: result
---
success: false
exit_code: 1
stdout: ""
stderr: "error: could not compile `foo`\n"
duration_ms: 1500
