crates/shipper-process/src/snapshots/shipper_process__snapshot_tests__command_result_json_format.snap
---
source: crates/shipper-process/src/lib.rs
expression: json
---
duration_ms: 100
exit_code: 0
stderr: ""
stdout: ok
success: true
