crates/shipper-process/src/snapshots/shipper_process__snapshot_tests__command_result_success.snap
---
source: crates/shipper-process/src/lib.rs
expression: result
---
success: true
exit_code: 0
stdout: "hello world\n"
stderr: ""
duration_ms: 42
