crates/shipper-process/src/snapshots/shipper_process__snapshot_tests__command_result_with_multiline_output.snap
---
source: crates/shipper-process/src/lib.rs
expression: result
---
success: true
exit_code: 0
stdout: "line 1\nline 2\nline 3\n"
stderr: "warning: unused variable\n"
duration_ms: 200
