crates/shipper-process/src/snapshots/shipper_process__snapshot_tests__error_message_empty_stderr.snap
---
source: crates/shipper-process/src/lib.rs
expression: err.to_string()
---
"command failed with exit code Some(2): "
