crates/shipper-process/src/snapshots/shipper_process__snapshot_tests__error_message_with_exit_code.snap
---
source: crates/shipper-process/src/lib.rs
expression: err.to_string()
---
"command failed with exit code Some(127): command not found: foo"
